<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="Hello_World">Hello World!</string>
    <string name="ButtonText">I\'m a Button!</string>
    <string name="loginHead">Login</string>
    <string name="passwordHead">Password</string>
    <string name="whatDoes">What does this do? </string>
    <string name="radioBtn">Radio Button</string>
    <string name="checkBx">Check Box</string>
    <string name="hint">login email</string>
    <string name="dialog_message">Do you want to close the app?</string>
    <string name="dialog_title">Close?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="chatbtn">Start Chat</string>
    <string name="send">send</string>
    <string name="yourmessage">your message</string>
    <string name="image_description">yo</string>
    <string name="message_v">message is here</string>
    <string name="delete_message">Delete Message</string>
    <string name="message_id">id =</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolButton">tool</string>
</resources>
