<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.lock0134.androidlabs.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">

    <RadioButton
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/radioBtn"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <CheckBox
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/checkBx"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <Switch
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/whatDoes"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <ImageView
        android:layout_column="1"
        android:layout_row="1"
        android:src="@drawable/flag"
        android:layout_columnWeight="1"
        android:gravity="fill"

        />



</GridLayout>
